--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="John Doe">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My page title</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="index.css">
     </head>
     <body>    
       <div>
